--- a/base/Visualisation/COVID19 report Moria V1.ipynb
+++ b/base/Visualisation/COVID19 report Moria V1.ipynb
@@ -2439,6 +2439,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -2454,7 +2455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
